cluster/squid/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: squid
  namespace: squid
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: squid.samcday.com
      http:
        paths:
        - backend:
            service:
              name: squid-public
              port:
                number: 3128
          path: /
          pathType: Prefix
  tls:
    - hosts: [squid.samcday.com]
      secretName: tls
